# dioxus-aws

./: Cargo.toml  README.md  README.org
docs/: launch.md
example/: Cargo.toml  Dioxus.toml  README.md
example/fixtures/aws-cdk/: cdk.json  package-lock.json  package.json
example/fixtures/aws-cdk/lib/: aws-cdk-stack.ts
example/src/: main.rs
src/: lambda.rs  lib.rs
