[package]
name = "dioxus-aws"
version = "0.5.0"
edition = "2021"
description = "Library for deploying Dioxus apps to AWS Serverless (AWS Lambda, S3, CloudFront, Route53)."
licenses = "MIT"
license-file = "LICENSE.md"
keywords = ["dioxus", "fullstack", "aws", "serverless"]

[dependencies]
dioxus = { version = "0.5",  features = ["router", "fullstack"] }
tracing = "0.1.40"

tokio = { version = "1.39.1" }
axum = { version = "0.7.5", optional = true }
dioxus-fullstack = { version = "0.5", optional = true  }

time = { version = "0.3.36", optional = true }
tower-sessions = { version = "0.12.2", optional = true }
tower-sessions-dynamodb-store = { version = "0.2.0", optional = true }

lambda_http = { version = "0.12.0", optional = true }
lambda_runtime = { version = "0.12.0", optional = true }
tower = { version = "0.4.13", features = ["util"], optional = true }
http = { version = "1.1.0", optional = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/axum", "dioxus-fullstack", "axum", "tokio/full"]
session = ["time", "tower-sessions", "tower-sessions-dynamodb-store"]
lambda = ["server", "tower", "lambda_http", "lambda_runtime", "http"]
